github_data_collector/src/data/issue_comment/WizTeam_WizQTClient.txt
更新为最新版的MAC客户端，在偏好设置中，设置默认字体时，选择字体界面一片空白
如题，从2.7.9就有了，到了2.8.1还是没有解决。 类似于 `[文字](http://xxx.com/xxx/xxx)` 这种最基本语法，在这版的为知笔记中在预览模式下不能显示为正常的链接。

optimize archlinux PKGBUILD: Use git + local file repo

1. we do not need to download the source tar ball again since we already in the repo
2. use `git symbolic-ref --short -q HEAD` to get current branch name programmatically
markdown笔记中如果含有代码，且单行长度较长，导出成pdf时会被截断，从而显示不完整。如下图：
<img width="599" alt="屏幕快照 2019-09-30 下午3 08 00" src="https://user-images.githubusercontent.com/11656711/65856409-2233dd00-e394-11e9-8ab3-f2b56e88cc56.png">

from qtcreator:
```
Starting /home/admz/build/build-WizQTClient-2.7.8-Desktop-Release/src/WizNote ...
QApplication: invalid style override passed, ignoring it.
    Available styles: Windows, Fusion
"QLocalSocket::connectToServer: Connection refused"
```

$ /home/admz/build/build-WizQTClient-2.7.8-Desktop-Release/src/WizNote
"QLocalSocket::connectToServer: Connection refused"
https://www.wiz.cn/wiznote-linux.html
（Ubuntu 18 https://url.wiz.cn/u/linuxUbuntu18）

从上处得到的wiznote，无法在ubuntu 18.04中利用fcitx输入法输入中文


打开任意笔记必定闪退
[WARNING]: Release of profile requested but WebEnginePage still not deleted. Expect troubles ! ((null):0, (null))
Segmentation fault (core dumped)

求解决 不然只能开win虚拟机运行了 ，很不方便
目前没有看到有firefox的网页收藏插件，是否有相关的计划？
```
[ 78%] Building CXX object src/CMakeFiles/WizNote.dir/widgets/WizTableSelector.cpp.o
/home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp: In lambda function:
/home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:192:44: error: invalid use of incomplete type ‘class QMimeData’
         QMimeData* newData = new QMimeData();
                                            ^
In file included from /opt/qt511/include/QtGui/QKeyEvent:1,
                 from /home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:7:
/opt/qt511/include/QtGui/qevent.h:603:7: note: forward declaration of ‘class QMimeData’
 class QMimeData;
       ^~~~~~~~~
/home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:193:36: error: invalid use of incomplete type ‘const class QMimeData’
         for (auto format : mimeData->formats()) {
                                    ^~
In file included from /opt/qt511/include/QtGui/QKeyEvent:1,
                 from /home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:7:
/opt/qt511/include/QtGui/qevent.h:603:7: note: forward declaration of ‘class QMimeData’
 class QMimeData;
       ^~~~~~~~~
/home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:197:47: error: invalid use of incomplete type ‘const class QMimeData’
                 QByteArray htmlData = mimeData->data(format);
                                               ^~
In file included from /opt/qt511/include/QtGui/QKeyEvent:1,
                 from /home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:7:
/opt/qt511/include/QtGui/qevent.h:603:7: note: forward declaration of ‘class QMimeData’
 class QMimeData;
       ^~~~~~~~~
/home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:200:24: error: invalid use of incomplete type ‘class QMimeData’
                 newData->setHtml(html);
                        ^~
In file included from /opt/qt511/include/QtGui/QKeyEvent:1,
                 from /home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:7:
/opt/qt511/include/QtGui/qevent.h:603:7: note: forward declaration of ‘class QMimeData’
 class QMimeData;
       ^~~~~~~~~
/home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:203:24: error: invalid use of incomplete type ‘class QMimeData’
                 newData->setData(format, mimeData->data(format));
                        ^~
In file included from /opt/qt511/include/QtGui/QKeyEvent:1,
                 from /home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:7:
/opt/qt511/include/QtGui/qevent.h:603:7: note: forward declaration of ‘class QMimeData’
 class QMimeData;
       ^~~~~~~~~
/home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:203:50: error: invalid use of incomplete type ‘const class QMimeData’
                 newData->setData(format, mimeData->data(format));
                                                  ^~
In file included from /opt/qt511/include/QtGui/QKeyEvent:1,
                 from /home/admz/build/WizQTClient-2.7.6/src/share/WizWebEngineView.cpp:7:
/opt/qt511/include/QtGui/qevent.h:603:7: note: forward declaration of ‘class QMimeData’
 class QMimeData;
       ^~~~~~~~~
src/CMakeFiles/WizNote.dir/build.make:1286: recipe for target 'src/CMakeFiles/WizNote.dir/share/WizWebEngineView.cpp.o' failed
make[2]: *** [src/CMakeFiles/WizNote.dir/share/WizWebEngineView.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
CMakeFiles/Makefile2:259: recipe for target 'src/CMakeFiles/WizNote.dir/all' failed
make[1]: *** [src/CMakeFiles/WizNote.dir/all] Error 2
make: *** [all] Error 2
Makefile:129: recipe for target 'all' failed
03:04:00: The process "/usr/bin/cmake" exited with code 2.
Error while building/deploying project Project (kit: Desktop)
When executing step "CMake Build"
03:04:00: Elapsed time: 05:14.```